# qchem_inputgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
scripts/: qchem_inputgen
src/qchem-inputgen/: cli.py
src/qchem_inputgen/: cli.py  qchem.py
src/qchem_inputgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_qchem_render.py
