[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qchem_inputgen"
version = "0.1.0"
description = "Generate Q-Chem input files from XYZ geometries (defaults geared toward MRSF)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arnab Chakraborty" }]
dependencies = []

[project.scripts]
qchem_inputgen = "qchem_inputgen.cli:main"
